@@ -30,6 +30,7 @@
 \alias{diag,Matrix-method}
 \alias{head,Matrix-method}
 \alias{tail,Matrix-method}
+\alias{solve,Matrix,matrix-method}
 \alias{solve,Matrix,numeric-method}
 \alias{dim,Matrix-method}
 \alias{dimnames,Matrix-method}
