@@ -1,3 +1,8 @@
+2006-11-01  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/sparseMatrix.R (isSymmetric): drop 'factors' slot for symmetry test, via
+	* R/Auxiliaries.R (.as.dgC.0.factors):
+
 2006-11-01  Douglas Bates  <bates@r-project.org>
 
 	* R/Csparse.R,src/Csparse.c,tests/matprod.R,
